<resources>
    <string name="app_name">My Symphony</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">none</string>

    <string name="one">ONE</string>
    <string name="two">TWO</string>
    <string name="three">THREE</string>
    <string name="four">FOUR</string>
    <string name="runtime_permissions_txt">Please enable ALL permissions from app settings</string>
    <string name="title_activity_maps">CC Map</string>

    <string name="title_activity_news_web_acivity">NewsWebAcivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_news_web">NewsWebActivity</string>
    <string name="title_activity_news"></string>
    <string name="title_activity_stored_news_list"></string>
    <string name="main_ad_id">ca-app-pub-4365083222822400/8672759776</string>
    <string name="news_ad_id">ca-app-pub-4365083222822400/5102014575</string>


    <string name="invitation_title">Send App Invite Quickstart Invitation</string>
    <string name="invitation_message">My Symphony is the official app of Symphony Mobile,Bangladesh. Give a try!</string>
    <string name="invitation_deep_link">https://pcv59.app.goo.gl/vQaV</string>
    <string name="invitation_custom_image">http://imgur.com/cUu1myu</string>
    <string name="invitation_cta">Install!</string>

    <string name="deep_link_fmt" formatted="false">Deep Link: %s</string>
    <string name="invitation_id_fmt" formatted="false">Invitation ID: %s</string>

    <string name="sent_invitations_fmt" formatted="false">Sent %d invitations</string>
    <string name="send_failed">Sending invitations failed</string>
    <string name="invite_dialog_title">You got an invitation!</string>

    <string name="google_play_services_error">Google Play Services Error</string>

    <string name="send_to_news">Share this...</string>
    <string name="sent_from">Sent from My Symphony</string>


    <string name="facebook_app_id">2064990243720158</string>
    <string name="fb_login_protocol_scheme">fb2064990243720158</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"

    </string>
    <string name="home">Home</string>
    <string name="cc_chat">Customer Care Chat</string>
    <string name="customer_care">Customer Care</string>
    <string name="news">News</string>
    <string name="logout">Logout</string>
    <string name="title_activity_temp_bottom_nav">TempBottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="sample_name">John Doe</string>
    <string name="sample_phone">01711111111</string>
    <string name="sample_email">abc.cde.fgh@email.com</string>
    <string name="user_type">Bronze User</string>
    <string name="feature">Features</string>
    <string name="customer_care_location">Customer Cares</string>
    <string name="contact_us">Contact Us</string>
    <string name="self_care">Self Care</string>
    <string name="hotline1">Hotline 1</string>
    <string name="hotline2">Hotline 2</string>
    <string name="quick_link">Quick Link</string>
    <string name="apps_games">Apps &amp; games</string>
    <string name="see_all">See all</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="internet">Internet</string>
    <string name="invite">Invite</string>
    <string name="title_activity_self_care">Self Care</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>


    <string name="change_email"><u>Change Email</u></string>
    <string name="change_name"><u>Change Name</u></string>
    <string name="change_profile_picture"><u>Change Picture</u></string>
    <string name="change_password"><u>Change Password</u></string>
    <string name="delete_account"><u>Delete Account</u></string>
    <string name="email_hint"><i>john@email.com</i></string>
    <string name="name_hint"><i>John Doe</i></string>
    <string name="location_hint"><i>Gulshan,Dhaka,Bangladesh</i></string>
    <string name="edit_profile">Edit Profile</string>
    <string name = "hint_phone_number"><i>0171000000</i></string>
</resources>
