<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_marginBottom="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll_content_holder"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/rl_news"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_news"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?android:attr/windowBackground">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardUseCompatPadding="true"
                app:cardElevation="3dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp"
                    android:gravity="center">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/civ_profile"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_70sdp"
                        android:src="@drawable/ic_person_black"
                        app:civ_border_color="@color/gray"
                        app:civ_border_width="2dp"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:orientation="vertical"
                        android:gravity="center">
                        <ImageView
                            android:id="@+id/iv_edit_profile"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:src="@drawable/ic_contact"
                            android:layout_alignParentEnd="true"/>
                        <TextView
                            android:id="@+id/txt_user_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/sample_name"
                            android:layout_weight="1"
                            android:maxLength="36"
                            android:textSize="@dimen/main_user_info"
                            android:textStyle="bold"
                            android:padding="@dimen/_3sdp" />

                        <TextView
                            android:layout_below="@+id/txt_user_name"
                            android:id="@+id/txt_user_contact"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="16"
                            android:textSize="@dimen/main_user_info"
                            android:hint="@string/sample_phone"
                            android:padding="@dimen/_3sdp"/>
                        <TextView
                            android:layout_below="@+id/txt_user_contact"
                            android:id="@+id/txt_user_mail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/sample_email"
                            android:maxLength="36"
                            android:padding="@dimen/_3sdp"
                            android:textSize="@dimen/main_user_info" />
                    </RelativeLayout>
                </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="@dimen/_3sdp">
                        <LinearLayout
                            android:id="@+id/ll_features"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/main_feature_icon"
                                android:fitsSystemWindows="true"
                                android:scaleType="centerInside"
                                android:src="@drawable/ic_feature" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/feature"
                                android:textSize="@dimen/main_user_info"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:padding="@dimen/_3sdp"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/ll_cc"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/main_feature_icon"
                                android:fitsSystemWindows="true"
                                android:scaleType="centerInside"
                                android:src="@drawable/ic_cc" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/customer_care_location"
                                android:textSize="@dimen/main_user_info"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:padding="@dimen/_3sdp"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/ll_contact"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/main_feature_icon"
                                android:fitsSystemWindows="true"
                                android:scaleType="centerInside"
                                android:src="@drawable/ic_contact" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/contact_us"
                                android:textSize="@dimen/main_user_info"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:padding="@dimen/_3sdp"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <!-- 1st Event Banner -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardUseCompatPadding="true"
            app:cardElevation="3dp"
            android:id="@+id/card_event_banner_1"
            android:visibility="gone">

            <ImageView
                android:layout_width="match_parent"
                android:id="@+id/iv_event_banner_1"
                android:src="@drawable/offer_banner_image"
                android:layout_height="wrap_content"
                android:maxHeight="80dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true" />
        </android.support.v7.widget.CardView>
        <!-- 2nd Event Banner -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardUseCompatPadding="true"
            app:cardElevation="3dp"
            android:visibility="gone"
            android:id="@+id/card_event_banner_2">
            <ImageView
                android:layout_width="match_parent"
                android:id="@+id/iv_event_banner_2"
                android:src="@drawable/offer_banner_image"
                android:layout_height="wrap_content"
                android:maxHeight="80dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true" />
        </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll_apps_games">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardUseCompatPadding="true"
        app:cardElevation="3dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:padding="@dimen/_5sdp"
                android:text="@string/apps_games"/>
            <TextView
                android:id="@+id/txt_apps_games_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:padding="@dimen/_3sdp"
                android:text="@string/see_all"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_apps_games"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll_quick_link"
            android:layout_marginBottom="20dp">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                card_view:cardUseCompatPadding="true"
                app:cardElevation="3dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/quick_link"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="4">
                        <LinearLayout
                            android:id="@+id/ll_facebook"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:paddingLeft="10dp"
                            android:onClick="loadFacebook">
                            <ImageView
                                android:layout_width="@dimen/main_quick_link_block_icon"
                                android:layout_height="@dimen/main_quick_link_block_icon"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_facebook"
                                android:layout_gravity="center_horizontal"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/facebook"
                                android:textSize="@dimen/main_user_info"
                                android:paddingBottom="5dp"
                                android:gravity="center_horizontal"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/ll_instagram"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:onClick="loadInstagram"
                            android:paddingLeft="10dp">
                            <ImageView
                                android:layout_width="@dimen/main_quick_link_block_icon"
                                android:layout_height="@dimen/main_quick_link_block_icon"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_instagram"
                                android:layout_gravity="center_horizontal"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/instagram"
                                android:textSize="@dimen/main_user_info"
                                android:paddingBottom="5dp"
                                android:gravity="center_horizontal"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/ll_web_browser"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:paddingLeft="10dp"
                            android:onClick="loadWeb">
                            <ImageView
                                android:layout_width="@dimen/main_quick_link_block_icon"
                                android:layout_height="@dimen/main_quick_link_block_icon"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_interent"
                                android:layout_gravity="center_horizontal"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/internet"
                                android:textSize="@dimen/main_user_info"
                                android:paddingBottom="5dp"
                                android:gravity="center_horizontal"/>
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/ll_invite"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:onClick="loadInvitation"
                            android:paddingLeft="5dp">
                            <ImageView
                                android:layout_width="@dimen/main_quick_link_block_icon"
                                android:layout_height="@dimen/main_quick_link_block_icon"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_invite"
                                android:layout_gravity="center_horizontal"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/invite"
                                android:textSize="@dimen/main_user_info"
                                android:paddingBottom="5dp"
                                android:gravity="center_horizontal"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>